Implement Api for manage users

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -262,7 +262,7 @@ development:
     # prevent_multiple_calls_of_embedded_callbacks: true
 
     # Raise an error when performing a #find and the document is not found.
-    # raise_not_found_error: true
+    raise_not_found_error: false
 
     # Raise an error when defining a scope with the same name as an
     # existing method.
@@ -285,7 +285,6 @@ development:
     # When this flag is set to true, the update and replace methods will
     # validate the paramters and raise an error if they are invalid.
     # validate_update_replace: false
-
 
 test:
   clients:
