Update Ruby version and dependencies; enhance Dockerfile for production and development
- Updated Ruby version from 3.3.4 to 3.4.7 in .ruby-version and Dockerfile.
- Modified Dockerfile to include additional environment variables for Rails.
- Improved gem installation process and updated bundler.
- Enhanced build stage in Dockerfile with necessary packages for gem installation.
- Adjusted permissions for runtime files and created necessary directories.
- Updated Gemfile to use Rails 8.0 and compatible gems.
- Updated Gemfile.lock to reflect changes in dependencies and versions.
- Refactored application configuration to load defaults for Rails 8.0.
- Updated CarrierWave initializer to disable Fog configuration and use Cloudinary directly.
- Modified Sidekiq initializer to use environment variable for Redis URL.
- Updated Mongoid configuration to use environment variables for database connection.
- Created a new Dockerfile.dev for development environment with necessary packages and configurations.

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -4,16 +4,8 @@ development:
     # Defines the default client. (required)
     default:
       # Mongoid can connect to a URI accepted by the driver:
-      # uri: mongodb://user:password@mongodb.domain.com:27017/blancakan_api_development
-
-      # Otherwise define the parameters separately.
-      # This defines the name of the default database that Mongoid can connect to.
-      # (required).
-      database: blancakan_api_development
-      # Provides the hosts the default client can connect to. Must be an array
-      # of host:port pairs. (required)
-      hosts:
-        - localhost:27017
+      # Use MONGODB_URI environment variable for Docker, fallback to localhost for local development
+      uri: <%= ENV['MONGODB_URI'] || 'mongodb://localhost:27017/blancakan_api_development' %>
       options:
         # Note that all options listed below are Ruby driver client options (the mongo gem).
         # Please refer to the driver documentation of the version of the mongo gem you are using
@@ -285,6 +277,19 @@ development:
     # When this flag is set to true, the update and replace methods will
     # validate the paramters and raise an error if they are invalid.
     # validate_update_replace: false
+
+production:
+  clients:
+    default:
+      # Use MONGODB_URI environment variable for production
+      uri: <%= ENV.fetch('MONGODB_URI') %>
+      options:
+        max_pool_size: 10
+        min_pool_size: 1
+        wait_queue_timeout: 5
+        connect_timeout: 10
+        socket_timeout: 60
+        server_selection_timeout: 30
 
 test:
   clients:
